<resources>
    <string name="app_name">ARGuideApp</string>
    <string name="Home_Info">Привет!\nСегодня мы в России, г. Москва</string>
    <string name="temperature">+13°С...+16°С</string>
    <string name="location">Россия, Москва</string>
    <string name="union_item">Union</string>
    <string name="robot_item">Robot</string>
    <string name="bg_item">Bg</string>
    <string name="Moscow">Москва</string>
    <string name="MoscowEvents1">Найдено</string>
    <string name="CountMoscowEvents">1 573</string>
    <string name="MoscowEvents2">события</string>
    <string name="Dates">17 июня - 11 июля 2022 г.</string>
    <string name="event1">событие1</string>
    <string name="event2">событие2</string>
    <string name="event3">событие3</string>
    <string name="event4">событие4</string>

    <string name="SaintPetersburg">Санкт-Петербург</string>
    <string name="SaintPetersburg1">Найдено</string>
    <string name="CountSaintPetersburgEvents">1 235</string>
    <string name="SaintPetersburg2">событий</string>

    <string name="naming1">On Board</string>
    <string name="naming2">Augmented Reality Guide</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="logbutton">Кнопка войти</string>
    <string name="bglog">задник1</string>
    <string name="bgpswd">задник2</string>

    <string name="back">назад</string>
    <string name="pageinfo">Редактирование личной информации</string>
    <string name="Name">Ваше имя</string>
    <string name="SurName">Ваша фамилия</string>
    <string name="NameFiels">имечко</string>

    <string name="AboutApp">О приложении</string>
    <string name="Version">Версия 8.9.0, сборка 8271</string>
    <string name="Corporation">2022 OnBoard Corporation</string>

    <string name="Avatar">аватар</string>
    <string name="profileinfo">инфа о профиле</string>
    <string name="settingsbg">задник настроек</string>
    <string name="settingsbtn">настройки</string>
    <string name="about">о приложении</string>


    <string name="moscow_item">Moscow</string>
    <string name="saint_petesburg_item">Saint Petesburg</string>
    <string name="Istambul_item">Istambul</string>
    <string name="Kazan_item">Kazan</string>
    <string name="Tokyo_item">Tokyo</string>
    <string name="Toronto_item">Toronto</string>
    <string name="Rome_item">Rome</string>
    <string name="Budapesht_item">Budapesht</string>
    <string name="Venice_item">Venice</string>
    <string name="London_item">London</string>
    <string name="Paris_item">Paris</string>

    <string name="imageevent">фоточка</string>
    <string name="bgdescription">еще один задник</string>
    <string name="PeterTheFirst">Памятник Петру I</string>
    <string name="MainTitlePeter1">Памятник Петру I в Москве</string>
    <string name="MainText">Одна из самых масштабных фигур-памятников России находится в Москве.
        Это памятник Петру I на Москве-реке. Он сооружен на небольшом насыпном островке между рекой и Водоотводным каналом.
        Выполненный Церетели памятник Петру I в Москве носит официальное название «В ознаменование 300-летия российского флота».
        Монумент образован из 3 частей: пьедестала, корабля и императора.</string>
    <string name="MainText1">Окруженный множеством споров по поводу облика, эстетики, размеров,
        месторасположения и затрат на изготовление и установку, монумент заработал себе неоднозначную славу.
        После установки памятник Петру Великому в Москве упоминался в различных литературных,
        музыкальных и кинопроизведениях.</string>
    <string name="photo1">фоточка1</string>
    <string name="photo2">фоточка2</string>


    <string name="MscEv2">Суп Кафе</string>
    <string name="MainTitleMscEv2">Суп Кафе</string>
    <string name="MainText2">СУП кафе появился в городе тогда, когда Москва только вошла во вкус клубного веселья,
        виниловой магии и тусовочной жизни сутки напролет. Идея в любое время дня и ночи восстановить силы,
        выйти на старт или подкрепиться перед сном тарелкой отличного супа была воспринята «на ура».
        Как только было открыто круглосуточное кафе, сюда сразу же стали заходить ночные тусовщики, в обед -
        менеджеры и служащие, и студенты - утром и вечером, да и просто хорошие люди в любое время суток.
        Суперважным элементом СУПа стало постоянное наличие диджеев, тогдашних главных героев ночной жизни.
        Это были  виниловые эстеты, абсолютно замороченные на современной электронной музыке ребята, которые
        играли музыку ради Музыки. Когда бы вы ни зашли в кафе, здесь неизменно будет звучать лучшая подборка.
        Плейлист бара составляется так, чтобы круглосуточно посетители СУПа заряжались бодростью и хорошим настроением.
        В результате все московские тусовщики знали чётко — в СУПе можно не только поправить здоровье, но и согреть душу.
        Ведь музыка лечит и духовно и физически, особенно если она проникает до самой глубины души.</string>
    <string name="MainText2.1">Теперь СУП возродился. С учётом современных требований к дизайну,
        к рецептуре и к музыке. Но атмосфера, та самая чертовски доверительная атмосфера, мирящая
        «женатиков» и отъявленных гуляк, футбольных болельщиков и завсегдатаев консерватории,
        жаворонков и сов, осталась прежней. А олицетворяет это содружество наше фирменное СУП-ассорти!
        Проверьте, круглосуточное кафе находится все там же! Прохожие все так же готовы указать дорогу
        к нам, если вы спросите хорошее ночное кафе рядом с м. Белорусская(улица 1-я Брестская, у
        площади Тверская застава, рядом с улицей 1-я Тверская-Ямская . Мы расширили меню, изменили
        формат кафе, но наша кухня от этого только выиграла. А это значит, что у нас есть и завтраки
        (по будням с 5 до 12, а по выходным аж до 14!), и обеды (с 12 до 16 по будням за более чем
        приятную стоимость в 341- 440руб.), в зависимости от того, что вы выберете.</string>

    <string name="MscEv3">«Огни Столицы»</string>
    <string name="MainTitleMscEv3">«Огни Столицы»: вечерняя обзорная экскурсия на автобусе</string>
    <string name="MainText3">Вечером, в огнях подсветки, столица особенно романтична. Вы начнёте
        экскурсию со старинных памятников архитектуры и в неспешном ритме доедете до самых
        современных небоскрёбов Москва-Сити. Профессиональный гид обогатит ваши знания о Москве.
        Вы узнаете, как Москва стала одним из ярчайших городов мира. Примерный маршрут: Красная
        площадь, улица музеев Волхонка, Патриарший мост, Воробьёвы горы, смотровая площадка,
        Большой театр, Новый Арбат.</string>
    <string name="MainText3.1">Что вас ожидает:
        Вы отправитесь в незабываемое путешествие по вечерней Москве. На комфортабельном автобусе и в
        спокойной атмосфере вы проедете по главным достопримечательностям столицы нашей страны.
        Профессиональный гид организует увлекательный вечер, обогатит ваши знания о Москве и расскажет
        увлекательные факты, тайны и легенды из жизни столицы.
        Вся экскурсия построена таким образом, что вы будете перемещаться от самых древних памятников
        архитектуры к самым высокотехнологичным новинкам.
        В течение поездки вас ждёт до пяти длительных остановок в самых атмосферных местах исторического
        центра, где вы сможете прогуляться и прочувствовать уникальную атмосферу вечерней Москвы,
        а также сделать потрясающие фотографии.
        Вас ждут: Красная площадь, Храм Христа Спасителя, улица музеев Волхонка, Патриарший мост, Воробьёвы
        горы, смотровая площадка, Большой театр, Новый Арбат, Москва-сити и многое другое.</string>

    <string name="ComingSoon">Coming Soon...</string>

    <string name="line">coolline</string>
    <string name="PlanTitle">Запланированные путешествия</string>
    <string name="DAyBAr">DAyBAr</string>
    <string name="June">Июнь</string>
    <string name="July">Июль</string>
    <string name="August">Август</string>
    <string name="typeofplane">план</string>
    <string name="typeofplane1">план1</string>
    <string name="typeofplane2">план2</string>
    <string name="typeofplane3">план3</string>
    <string name="CityPlan">План путешествия Санкт-Петербург</string>


    <string name="BgButton_item">BgButton</string>
    <string name="MoreButton_item">MoreButton</string>
    <string name="BGMenu_item">BgMenu</string>
    <string name="ActiveHomePageButton_item">HomePageButton</string>
    <string name="InActiveHomePageButton_item">HomePageButton</string>
    <string name="InactiveCalendarButton_item">InactiveCalendarButton</string>
    <string name="ActiveCalendarButton_item">ActiveCalendarButton</string>
    <string name="InactiveProfileButton_item">InactiveProfileButton</string>
    <string name="ActiveProfileButton_item">ActiveProfileButton</string>
    <string name="Search">Поиск</string>
    <string name="Scrolling">Список городов</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">92a7a0088c1530207c6e4d38e7e58027</string>
    <string name="City_name_Weather">Москва</string>
    <string name="Weather_Icon">Иконочка</string>
    <string name="divider">/</string>


    <string name="place_not_found">Sorry, no weather data found.</string>


</resources>