<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="780dp"
    android:background="@color/mybackground"
    tools:context=".saintpeterspurgplan">

    <ImageView
        android:id="@+id/menubg"
        android:layout_width="363dp"
        android:layout_height="61dp"
        android:contentDescription="@string/BGMenu_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:srcCompat="@drawable/ic_menubg" />

    <ImageButton
        android:id="@+id/InActiveHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ActiveHomePageButton_item"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="ToMain"
        app:layout_constraintBottom_toBottomOf="@+id/menubg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/menubg"
        app:layout_constraintTop_toTopOf="@+id/menubg"
        app:srcCompat="@drawable/ic_inactivehomepage" />

    <ImageButton
        android:id="@+id/ActiveCalendarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ActiveCalendarButton_item"
        android:minHeight="48dp"
        android:onClick="ToCalendar"
        app:layout_constraintBottom_toBottomOf="@+id/menubg"
        app:layout_constraintEnd_toStartOf="@+id/InActiveHomeButton"
        app:layout_constraintStart_toStartOf="@+id/menubg"
        app:layout_constraintTop_toTopOf="@+id/menubg"
        app:srcCompat="@drawable/ic_activecalendarbutton" />

    <ImageButton
        android:id="@+id/InactiveProfileButtonInCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/InactiveProfileButton_item"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="ToProfile"
        app:layout_constraintBottom_toBottomOf="@+id/menubg"
        app:layout_constraintEnd_toEndOf="@+id/menubg"
        app:layout_constraintStart_toEndOf="@+id/InActiveHomeButton"
        app:layout_constraintTop_toTopOf="@+id/menubg"
        app:srcCompat="@drawable/ic_inactiveaccount" />

    <ImageView
        android:id="@+id/coolline2"
        android:layout_width="361dp"
        android:layout_height="484dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/menubg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        app:srcCompat="@drawable/ic_justacoolline"
        android:contentDescription="@string/line"/>

    <TextView
        android:id="@+id/CityPlan"
        android:layout_width="307dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/CityPlan"
        android:textColor="@color/TextColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/dayoneline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/June"
        app:layout_constraintBottom_toTopOf="@+id/coolline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CityPlan"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_day1" />

    <ImageButton
        android:id="@+id/daytwonoline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/July"
        android:onClick="ToSecondDay"
        app:layout_constraintBottom_toTopOf="@+id/coolline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dayoneline"
        app:layout_constraintTop_toBottomOf="@+id/CityPlan"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_secondaynoline" />

    <ImageView
        android:id="@+id/firststep"
        android:layout_width="325dp"
        android:layout_height="81dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/typeofplane1"
        app:layout_constraintStart_toStartOf="@+id/coolline2"
        app:layout_constraintTop_toTopOf="@+id/coolline2"
        app:srcCompat="@drawable/ic_firststep" />

    <ImageView
        android:id="@+id/secondstep"
        android:layout_width="321dp"
        android:layout_height="85dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/typeofplane2"
        app:layout_constraintStart_toStartOf="@+id/coolline2"
        app:layout_constraintTop_toBottomOf="@+id/firststep"
        app:srcCompat="@drawable/ic_secondstep" />

    <ImageButton
        android:id="@+id/thirdstep"
        android:layout_width="330dp"
        android:layout_height="94dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/typeofplane3"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/coolline2"
        app:layout_constraintTop_toBottomOf="@+id/secondstep"
        app:srcCompat="@drawable/ic_thirdstep" />


</androidx.constraintlayout.widget.ConstraintLayout>