<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="780dp"
    android:background="@color/mybackground"
    tools:context=".AboutApp">

    <ImageButton
        android:id="@+id/backtoprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="BackToProfileFromAboutApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_backarrow" />

    <TextView
        android:id="@+id/LabelAboutApp"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:text="@string/AboutApp"
        android:textColor="@color/TextColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backtoprofile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LogoName"
        android:layout_width="211dp"
        android:layout_height="51dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/naming1"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LabelAboutApp" />

    <TextView
        android:id="@+id/MiniLogoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoName"
        android:fontFamily="@font/sf_pro_display_light"
        android:letterSpacing="0.38"
        android:text="@string/naming2"
        android:textColor="#000000"/>

    <ImageView
        android:id="@+id/Robot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MiniLogoName"
        app:srcCompat="@drawable/robot"
        android:contentDescription="@string/robot_item"/>

    <TextView
        android:id="@+id/Version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/Version"
        android:textColor="@color/TextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Robot" />

    <TextView
        android:id="@+id/Corporation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/Corporation"
        android:textColor="@color/TextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Version"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>