<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="780dp"
    tools:context=".SaintPetersburgEvents">


    <ImageView
        android:id="@+id/SaintPetersburgEvent"
        android:layout_width="360dp"
        android:layout_height="244dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Moscow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/spmain" />

    <ImageView
        android:id="@+id/bgevents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bg_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_bgevents" />

    <ImageView
        android:id="@+id/BGMenu"
        android:layout_width="359dp"
        android:layout_height="61dp"
        android:contentDescription="@string/BGMenu_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:srcCompat="@drawable/ic_menubg" />

    <ImageButton
        android:id="@+id/ActiveHomePageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ActiveHomePageButton_item"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="ToMainPageFromSp"
        app:layout_constraintBottom_toBottomOf="@+id/BGMenu"
        app:layout_constraintEnd_toEndOf="@+id/BGMenu"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/BGMenu"
        app:layout_constraintTop_toTopOf="@+id/BGMenu"
        app:srcCompat="@drawable/ic_activehomepage" />

    <ImageButton
        android:id="@+id/InactiveCalendarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/InactiveCalendarButton_item"
        android:minHeight="48dp"
        android:onClick="ToCalendarPageFromSp"
        app:layout_constraintBottom_toBottomOf="@+id/BGMenu"
        app:layout_constraintEnd_toStartOf="@+id/ActiveHomePageButton"
        app:layout_constraintStart_toStartOf="@+id/BGMenu"
        app:layout_constraintTop_toTopOf="@+id/BGMenu"
        app:srcCompat="@drawable/ic_inactivecalendar" />

    <ImageButton
        android:id="@+id/InactiveProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/InactiveProfileButton_item"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="ToProfilePageFromSp"
        app:layout_constraintBottom_toBottomOf="@+id/BGMenu"
        app:layout_constraintEnd_toEndOf="@+id/BGMenu"
        app:layout_constraintStart_toEndOf="@+id/ActiveHomePageButton"
        app:layout_constraintTop_toTopOf="@+id/BGMenu"
        app:srcCompat="@drawable/ic_inactiveaccount" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/SaintPetersburg"
        android:textColor="@color/LightTextColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/sf_pro_display_light"
        android:text="@string/MoscowEvents1"
        android:textColor="@color/LightTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/CountSaintPetersburgEvents"
        android:textColor="@color/LightTextColor"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/sf_pro_display_light"
        android:text="@string/SaintPetersburg2"
        android:textColor="@color/LightTextColor"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/sf_pro_display_light"
        android:text="@string/Dates"
        android:textColor="@color/LightTextColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ScrollView
        android:layout_width="362dp"
        android:layout_height="477dp"
        app:layout_constraintBottom_toTopOf="@+id/BGMenu"
        app:layout_constraintEnd_toEndOf="@+id/bgevents"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/bgevents"
        app:layout_constraintTop_toTopOf="@+id/bgevents"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollView2"
            android:layout_width="364dp"
            android:layout_height="468dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/BGMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bgevents"
            app:layout_constraintVertical_bias="1.0">

            <ImageButton
                android:id="@+id/event4"
                android:layout_width="320dp"
                android:layout_height="106dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/event4"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event3"
                app:srcCompat="@drawable/sp4"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/event3"
                android:layout_width="321dp"
                android:layout_height="109dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/event3"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/even2"
                app:srcCompat="@drawable/sp3" />

            <ImageButton
                android:id="@+id/even2"
                android:layout_width="322dp"
                android:layout_height="110dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/event2"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event1"
                app:srcCompat="@drawable/sp2" />

            <ImageButton
                android:id="@+id/event1"
                android:layout_width="325dp"
                android:layout_height="107dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/event1"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sp1" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>